--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		  <img class="card-img-top" src="https://live.staticflickr.com/7015/6804719779_dd8c1683ec_b.jpg" alt="Card image cap">
 		  <div class="card-body">
 		    <h5 class="card-title">Water Collection</h5>
-		    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+		    <p class="card-text">See beautiful bodies of water.</p>
 		    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Check It Out!</button>
 		  </div>
 		</div>
@@ -84,7 +84,7 @@
 		  <img class="card-img-top" src="https://farm6.staticflickr.com/5509/11434080574_2597fe88c8_b.jpg" alt="Card image cap">
 		  <div class="card-body">
 		    <h5 class="card-title">Land Collection</h5>
-		    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+		    <p class="card-text">Gasp at gorgeous landscapes.</p>
 		    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Check It Out!</button>
 		  </div>
 		</div>
@@ -93,7 +93,7 @@
 		  <img class="card-img-top" src="https://farm4.staticflickr.com/3765/10508221763_ba951c6f57_b.jpg" alt="Card image cap">
 		  <div class="card-body">
 		    <h5 class="card-title">Sky Collection</h5>
-		    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+		    <p class="card-text">Enjoy staring at the deep blue sky.</p>
 		    <button class="btn btn-outline-primary my-2 my-sm-0" href="#" type="submit">Check It Out!</button>
 		  </div>
 		</div>
