adjusting home page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset='UTF-8'/>
     <meta name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-    <title>Landscape Photography</title>
+    <title>My Journal Pages</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel='stylesheet' href='styles.css'/>
   </head>
   <body>
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
-	  <a class="navbar-brand" href="#">Landscape Photography</a>
+	  <a class="navbar-brand" href="#">My Journal Pages</a>
 	  
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -23,17 +23,16 @@
 	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">About</a>
+	        <a class="nav-link" href="#">Profile</a>
 	      </li>
 	      <li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Collections
+	          Create
 	        </a>
 	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	          <a class="dropdown-item" href="#">Water</a>
-	          <a class="dropdown-item" href="#">Land</a>
-	          <div class="dropdown-divider"></div>
-	          <a class="dropdown-item" href="#">Sky</a>
+	          <a class="dropdown-item" href="#">Note</a>
+	          <a class="dropdown-item" href="#">Journal</a>
+	          <a class="dropdown-item" href="#">Blog</a>
 	        </div>
 	      </li>
 	      <!-- <li class="nav-item">
@@ -99,6 +98,10 @@
 		</div>
         
     </div>
+
+    <div class="footer">
+	  <a href="https://github.com/BYU-CS-260-Winter-2020/lab-1-photography-website-lathorne">https://github.com/BYU-CS-260-Winter-2020/lab-1-photography-website-lathorne</a>
+	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
