working on front page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	  <a class="navbar-brand" href="#">My Journal Pages</a>
 	  
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,9 +46,19 @@
 	  </div>
 	</nav>
 
+	<!-- <img src="phone-index.jpg" alt="Snow" style="width:100%;"> -->
+
     <div class='page'>
 
-    	<div id="carouselExampleControls p-2" class="carousel slide" data-ride="carousel">
+    	<div class="container h1">
+		  <!-- <img src="phone-index.jpg" alt="Snow" style="width:100%;"> -->
+		  <div class="centered">Centered</div>
+		</div>
+
+		<button type="button" class="btn btn-primary">Primary</button>
+		<button type="button" class="btn btn-outline-primary">Primary</button>
+
+    	<!-- <div id="carouselExampleControls p-2" class="carousel slide" data-ride="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item active pt-2 pl-2 pr-2">
 		      <img class="d-block w-100" src="https://farm5.staticflickr.com/4565/38559581986_b5103966fd_b.jpg" alt="First slide">
@@ -96,11 +106,14 @@
 		    <button class="btn btn-outline-primary my-2 my-sm-0" href="#" type="submit">Check It Out!</button>
 		  </div>
 		</div>
-        
+         -->
     </div>
 
+	<!-- This is to credit the photo -->
+    <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@cikstefan?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Štefan Štefančík"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Štefan Štefančík</span></a> -->
+
     <div class="footer">
-	  <a href="https://github.com/BYU-CS-260-Winter-2020/lab-1-photography-website-lathorne">https://github.com/BYU-CS-260-Winter-2020/lab-1-photography-website-lathorne</a>
+	  <a href="https://github.com/lathorne/creative-project">https://github.com/lathorne/creative-project</a>
 	</div>
 
     <!-- Optional JavaScript -->
