--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 	          <a class="dropdown-item" href="#">Blog</a>
 	        </div>
 	      </li>
-	      <!-- <li class="nav-item">
-	        <a class="nav-link disabled" href="#">Disabled</a>
-	      </li> -->
 	    </ul>
 	    <form class="form-inline my-2 my-lg-0">
 	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,67 +43,23 @@
 	  </div>
 	</nav>
 
-	<!-- <img src="phone-index.jpg" alt="Snow" style="width:100%;"> -->
-
     <div class='page'>
 
-    	<div class="container h1">
-		  <!-- <img src="phone-index.jpg" alt="Snow" style="width:100%;"> -->
-		  <div class="centered">Centered</div>
+    	<div class="container-fluid mt-3">
+		    <div class="row">
+  			  <div class="col-sm-4"></div>
+  			  <div class="col-sm-8 title align-right">Capture your ideas.</div>
+			</div>
+			<div class="row">
+			  <div class="col-sm-4"></div>
+  			  <div class="col-sm-8 title align-right">Anywhere.</div>
+			</div>
+			<div class="row">
+			  <div class="col-sm-9"></div>
+  			  <div class="col-sm-3 mt-3 pl-2"><button type="button" class="btn btn-outline-primary btn-lg btn-block">Learn More</button></div>
+			</div>
 		</div>
 
-		<button type="button" class="btn btn-primary">Primary</button>
-		<button type="button" class="btn btn-outline-primary">Primary</button>
-
-    	<!-- <div id="carouselExampleControls p-2" class="carousel slide" data-ride="carousel">
-		  <div class="carousel-inner">
-		    <div class="carousel-item active pt-2 pl-2 pr-2">
-		      <img class="d-block w-100" src="https://farm5.staticflickr.com/4565/38559581986_b5103966fd_b.jpg" alt="First slide">
-		    </div>
-		    <div class="carousel-item pt-2 pl-2 pr-2">
-		      <img class="d-block w-100" src="https://farm8.staticflickr.com/7052/13798915935_6b02e193d3_b.jpg" alt="Second slide">
-		    </div>
-		    <div class="carousel-item pt-2 pl-2 pr-2">
-		      <img class="d-block w-100" src="https://farm1.staticflickr.com/737/30973260633_44640a9dcc_b.jpg" alt="Third slide">
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
-
-    	<div class="card m-2" style="width: 19rem;">
-		  <img class="card-img-top" src="https://live.staticflickr.com/7015/6804719779_dd8c1683ec_b.jpg" alt="Card image cap">
-		  <div class="card-body">
-		    <h5 class="card-title">Water Collection</h5>
-		    <p class="card-text">See beautiful bodies of water.</p>
-		    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Check It Out!</button>
-		  </div>
-		</div>
-
-		<div class="card m-2" style="width: 19rem;">
-		  <img class="card-img-top" src="https://farm6.staticflickr.com/5509/11434080574_2597fe88c8_b.jpg" alt="Card image cap">
-		  <div class="card-body">
-		    <h5 class="card-title">Land Collection</h5>
-		    <p class="card-text">Gasp at gorgeous landscapes.</p>
-		    <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Check It Out!</button>
-		  </div>
-		</div>
-
-		<div class="card m-2" style="width: 19rem;">
-		  <img class="card-img-top" src="https://farm4.staticflickr.com/3765/10508221763_ba951c6f57_b.jpg" alt="Card image cap">
-		  <div class="card-body">
-		    <h5 class="card-title">Sky Collection</h5>
-		    <p class="card-text">Enjoy staring at the deep blue sky.</p>
-		    <button class="btn btn-outline-primary my-2 my-sm-0" href="#" type="submit">Check It Out!</button>
-		  </div>
-		</div>
-         -->
     </div>
 
 	<!-- This is to credit the photo -->
