--- a/help.html
+++ b/help.html
@@ -1,4 +1,4 @@
-         <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
@@ -27,7 +27,7 @@ outline:none;
 
 input, button
 {
-    color: #555;
+    color: #333;
     font-family: Nunito;
     padding: 0;
     margin: 0;
@@ -44,20 +44,15 @@ input, button
     width: 550px;
     padding: 35px;
     margin: -83px auto 0 auto;
-    background-color: #777;
+    background-color: #d6dbf1;
     border-radius: 20px;
-    box-shadow: 0 10px 40px #999, 0 0 0 20px #888;
+    box-shadow: 0 10px 40px #2d4094, 0 0 0 20px #334bbb;
     transform: scale(0.6);
 }
 
-form
-{
-    height: 96px;
-}
-
 input[type="text"]
-{   
-    //width: 100%;
+{
+    width: 100%;
     height: 96px;
     font-size: 60px;
     line-height: 1;
@@ -65,11 +60,11 @@ input[type="text"]
 
 input[type="text"]::placeholder
 {
-    color: #111;
+    color: #666;
 }
 
 button
-{   
+{
     position: relative;
     display: block;
     //height: 96px;
@@ -89,8 +84,10 @@ button
     background-color: transparent;
     border-radius: 100%;
 }
-</style>
-         </head>
+
+   </style>
+
+  </head>
   <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
@@ -126,7 +123,9 @@ button
           </div>
         </nav>
 
-    <div class='page'>       <div class="container-fluid mt-2">
+    <div class='page'>
+
+        <div class="container-fluid mt-2">
                     <div class="row">
                           <div class="col-sm-2"></div>
                             <div class="col-sm-8 title align-right">How can we help you?</div>
@@ -181,10 +180,13 @@ button
                             <div class="col-sm-8  align-left"> <a href="#login" style="color:black">Find accounts</a> </div>
                     </div>
 
+                    <div class="row">
+                      <div class="col-sm-8 title align-center"> <br/>  </div>
+                    </div>
+
 
         </div>
     </div>
-
     <div class="footer">
       <h6 style="color: #778899">COMPANY</h6>
       <h6 style="color: #778899">COMMUNITIES</h6>
