--- a/help.html
+++ b/help.html
@@ -46,7 +46,7 @@ input, button
     margin: -83px auto 0 auto;
     background-color: #d6dbf1;
     border-radius: 20px;
-    box-shadow: 0 10px 40px #2d4094, 0 0 0 20px #334bbb;
+    box-shadow: 0 10px 40px #334bbb, 0 0 0 20px #007bff; 
     transform: scale(0.6);
 }
 
