--- a/help.html
+++ b/help.html
@@ -8,185 +8,89 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel='stylesheet' href='./styles/styles.css'/>
 
-<style>
-*{
-outline:none;
-}
-
-.tb
-{
-    display: table;
-    width: 100%;
-}
-
-.td
-{
-    display: table-cell;
-    vertical-align: middle;
-}
-
-input, button
-{
-    color: #333;
-    font-family: Nunito;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    background-color: transparent;
-}
-
-#cover
-{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    width: 550px;
-    padding: 35px;
-    margin: -83px auto 0 auto;
-    background-color: #d6dbf1;
-    border-radius: 20px;
-    box-shadow: 0 10px 40px #334bbb, 0 0 0 20px #007bff; 
-    transform: scale(0.6);
-}
-
-input[type="text"]
-{
-    width: 100%;
-    height: 96px;
-    font-size: 60px;
-    line-height: 1;
-}
-
-input[type="text"]::placeholder
-{
-    color: #666;
-}
-
-button
-{
-    position: relative;
-    display: block;
-    //height: 96px;
-    cursor: pointer;
-}
-
-#s-circle
-{
-    position: relative;
-    top: 0px;
-    left: 0;
-    width: 60px;
-    height: 60px;
-    margin-top: 0;
-    border-width: 0px;
-    border: 12px solid #fff;
-    background-color: transparent;
-    border-radius: 100%;
-}
-
-   </style>
-
   </head>
   <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
-          <a class="navbar-brand" href="#">My Journal Pages</a>
+  	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
+	  <a class="navbar-brand" href="#">My Journal Pages</a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./create.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Create
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="./create.html">Note</a>
-                  <a class="dropdown-item" href="#">Journal</a>
-                  <a class="dropdown-item" href="#">Blog</a>
-                </div>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
-        </nav>
+	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	    <ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+	      </li>
+        <li class="nav-item">
+	        <a class="nav-link" href="features.html">Features</a>
+	      </li>
+	      <li class="nav-item dropdown">
+	        <a class="nav-link dropdown-toggle" href="./create.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          Create
+	        </a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	          <a class="dropdown-item" href="./create.html">Note</a>
+	          <a class="dropdown-item" href="#">Journal</a>
+	          <a class="dropdown-item" href="#">Blog</a>
+	        </div>
+	      </li>
+        <li class="nav-item">
+          <a class="nav-link" href="help.html">Help</a>
+        </li>
+	    </ul>
+	    <form class="form-inline my-2 my-lg-0">
+	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+	      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+	    </form>
+	  </div>
+	</nav>
 
-    <div class='page'>
+  <div class='page'>
+    <div class="container-fluid mt-2">
+      <div class="row">
 
-        <div class="container-fluid mt-2">
-                    <div class="row">
-                          <div class="col-sm-2"></div>
-                            <div class="col-sm-8 title align-right">How can we help you?</div>
-                    </div>
+        <div class="col-sm-8 title align-right">How can we help you?</div>
+      </div>
 
+      <div class="row">
+        <div class="col-sm-8 title align-center"> <br/> </div>
+      </div>
 
-                    <div class="row">
-                            <div class="col-sm-8 title align-center"> <br/>  </div>
-                    </div>
+      <div class="row">
 
-                    <div class="row">
-                          <div class="col-sm-3"></div>
-                          <div class="col-sm-3 mt-2 pl-2">
-
-                            <div id="cover">
-                              <form method="get" action="">
-                                <div class="tb">
-                                  <div class="td"><input type="text" placeholder="Search" required></div>
-                                  <div class="td" id="s-cover">
-                                    <button type="submit">
-                                      <div id="s-circle"></div>
-                                      <span></span>
-                                    </button>
-                                  </div>
-                                </div>
-                              </form>
-                            </div>
-                          </div>
-                    </div>
-
-                    <div class="row">
-                            <div class="col-sm-8 title align-right"> <br/> </div>
-                    </div>
-
-                    <div class="row">
-                            <div class="col-sm-1"></div>
-                            <div class="col-sm-8  align-left" style="color:gray"> TOP SOLUTIONS </div>
-                    </div>
-
-                    <div class="row">
-                            <div class="col-sm-1"></div>
-                            <div class="col-sm-8  align-left"> <a href="#login" style="color:black">Can't log in</a> </div>
-                    </div>
-
-                    <div class="row">
-                            <div class="col-sm-1"></div>
-                            <div class="col-sm-8  align-left"> <a href="#login" style="color:black">Reset your password</a> </div>
-                    </div>
-
-                    <div class="row">
-                            <div class="col-sm-1"></div>
-                            <div class="col-sm-8  align-left"> <a href="#login" style="color:black">Find accounts</a> </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-sm-8 title align-center"> <br/>  </div>
-                    </div>
-
-
+        <div class="wrap ">
+           <div class="search">
+              <input type="text" class="searchTerm" placeholder="Search">
+              <button type="submit" class="searchButton">
+                <i class="fa fa-search"></i>
+             </button>
+           </div>
         </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-sm-8 align-left"><a style="font-size: 20px; color:black"><u>TOP SOLUTIONS</u></a></div>
+        <div class="col-sm-8 align-left"><a href="#about">Can't log in</a></div>
+        <div class="col-sm-8 align-left"><a href="#about">Reset your password</a></div>
+        <div class="col-sm-8 align-left"><a href="#about">Finding accounts</a></div>
+      </div>
+
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+
     </div>
+  </div>
+
+  <div class='page'>
+
+  </div>
+
     <div class="footer">
       <h6 style="color: #778899">COMPANY</h6>
       <h6 style="color: #778899">COMMUNITIES</h6>
@@ -205,8 +109,7 @@ button
       <a href="#login">Vendors</a>
       <a href="#login"></a>
       <a href="#login"></a>
-      <a href="#login"></a>
-      <a href="#login"></a>      <a href="#login"></a>
+
       <a href="https://github.com/lathorne/creative-project" style="font-size:10px">https://github.com/lathorne/creative-project</a>
     </div>
 
