--- a/create.html
+++ b/create.html
@@ -12,7 +12,7 @@
 
   	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
 	  <a class="navbar-brand" href="#">My Journal Pages</a>
-	  
+
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -22,8 +22,8 @@
 	      <li class="nav-item active">
 	        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Profile</a>
+        <li class="nav-item">
+	        <a class="nav-link" href="features.html">Features</a>
 	      </li>
 	      <li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="./create.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -35,6 +35,9 @@
 	          <a class="dropdown-item" href="#">Blog</a>
 	        </div>
 	      </li>
+        <li class="nav-item">
+          <a class="nav-link" href="help.html">Help</a>
+        </li>
 	    </ul>
 	    <form class="form-inline my-2 my-lg-0">
 	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -124,7 +127,7 @@
 		    <a href="#" class="card-link">Share</a>
 		  </div>
 		</div>
-    	
+
 
     </div>
 
@@ -133,8 +136,29 @@
     <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@cikstefan?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Štefan Štefančík"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Štefan Štefančík</span></a> -->
 
     <div class="footer">
-	  <a href="https://github.com/lathorne/creative-project">https://github.com/lathorne/creative-project</a>
-	</div>
+      <h6 style="color: #778899">COMPANY</h6>
+      <h6 style="color: #778899">COMMUNITIES</h6>
+      <h6 style="color: #778899">USEFUL LINKS</h6>
+
+      <a href="#about">About</a>
+      <a href="#login">For Writers</a>
+      <a href="#login">Help</a>
+      <a href="#login">Jobs</a>
+      <a href="#login">Brands</a>
+      <a href="#login">Free Mobile App</a>
+      <a href="#login">For the Record</a>
+      <a href="#login">Investors</a>
+      <a href="#login"></a>
+      <a href="#login"></a>
+      <a href="#login">Vendors</a>
+      <a href="#login"></a>
+      <a href="#login"></a>
+      <a href="#login"></a>
+      <a href="#login"></a>
+      <a href="#login"></a>
+
+      <a href="https://github.com/lathorne/creative-project" style="font-size:10px">https://github.com/lathorne/creative-project</a>
+        </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
