--- a/features.html
+++ b/features.html
@@ -113,30 +113,10 @@ outline:none;
       <br/>
     </div>
 
-    <div class="footer">
-      <h6 style="color: #778899">COMPANY</h6>
-      <h6 style="color: #778899">COMMUNITIES</h6>
-      <h6 style="color: #778899">USEFUL LINKS</h6>
-
-      <a href="#about">About</a>
-      <a href="#login">For Writers</a>
-      <a href="#login">Help</a>
-      <a href="#login">Jobs</a>
-      <a href="#login">Brands</a>
-      <a href="#login">Free Mobile App</a>
-      <a href="#login">For the Record</a>
-      <a href="#login">Investors</a>
-      <a href="#login"></a>
-      <a href="#login"></a>
-      <a href="#login">Vendors</a>
-      <a href="#login"></a>
-      <a href="#login"></a>
-      <a href="#login"></a>
-      <a href="#login"></a>
-      <a href="#login"></a>
-      <a href="https://github.com/lathorne/creative-project" style="font-size:10px">https://github.com/lathorne/creative-project</a>
-    </div>
-
+        <div class="footer">
+	  <a href="https://github.com/lathorne/creative-project">https://github.com/lathorne/creative-project</a>
+	</div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
