--- a/help.html
+++ b/help.html
@@ -91,7 +91,7 @@
 
   </div>
 
-    <div class="footer">
+    <div class="footer footer1">
       <h6 style="color: #778899">COMPANY</h6>
       <h6 style="color: #778899">COMMUNITIES</h6>
       <h6 style="color: #778899">USEFUL LINKS</h6>
