--- a/help.html
+++ b/help.html
@@ -20,7 +20,7 @@
   
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -30,7 +30,7 @@
             <a class="nav-link" href="create.html">Create</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="help.html">Help</a>
+            <a class="nav-link active" href="help.html">Help</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
